--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1012,24 +1012,58 @@ input:focus {
 .perceptionsWrapper {
     float: left;
     width: 100%;
-    max-width: 850px;
+    max-width: 831px;
     margin-left: 55px;
     margin-top: 30px;
     color: #fff;
+ 
 }
 
 .eachPerception {
     width: 200px;
+    height:60px;
     float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    transition: 0.4s ease-in all;
+    &:nth-child(4n){
+        margin-right:0;
+     }
+ 
     .multi-collapse {
         position: absolute !important;
+        left: 0;
+        transition: 0.4s ease-in all;
+    }
+    .container {
+        height: 100%;
+    }
+    .collapse {
+        display: block !important;
+        transition: 0.4s ease-in all;
+        height: 0;
+        margin-top: 10px;
+    }
+    .collapse.in {
+        height: 400px !important;
+        transition: 0.4s ease-in all;
     }
 }
 
-.percptionsCollapseWrapper {
+.eachPerception-opened{
+    height:470px;
+    transition: 0.4s ease-in all;
+}
+
+.perceptionsCollapseWrapper {
     float: left;
     width: 100%;
     position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .perceptionCollapse {
@@ -1039,26 +1073,87 @@ input:focus {
     font-family: $mainFont;
     color: #adadad;
     max-height: 400px;
-    overflow-y: scroll;
+    transition: 0.4s ease-in all;
+}
+
+.perceptionCollapse-disabled {
+    background: #3b3c3e;
+    transition: 0.4s ease-in all;
 }
 
 .perceptionBtnWrapper {
     background: #555658;
+    border: 1px solid #555658;
     height: 60px;
     width: 200px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    .perceptionBtn {
+    position: relative;
+}
+
+.perceptionBtn {
+    color: #fff;
+    font-family: $mainFont;
+    transition: 0.4s ease-in all;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 16px;
+    padding-left: 11px;
+    &:after {
+        content: "";
+        width: 101%;
+        height: 10px;
+        position: absolute;
+        left: -1px;
+        bottom: -11px;
+        background: #555658;
+        transition: $transition;
+    }
+    &:focus,
+    &:active {
+        color: #fff !important;
+    }
+    &:hover {
         color: #fff;
-        font-family: $mainFont;
+    }
+}
+
+.perceptionBtn.collapsed {
+    &:after {
+        transition: $transition;
+        height: 0;
+    }
+}
+
+.perceptionBtn-disabled {
+    background: #3b3c3e;
+    transition: $transition;
+    .perceptionBtn {
+        color: #89898a;
+        transition: $transition;
+        &:after {
+            background: #3b3c3e;
+            height: 11px;
+            bottom: -11px;
+        }
         &:focus,
         &:active {
-            color: #fff !important;
+            color: #89898a !important;
         }
         &:hover {
-            color: #fff;
+            color: #89898a;
         }
+    }
+}
+
+.perceptionBtn-disabled .perceptionBtn.collapsed {
+    &:after {
+        transition: $transition;
+        height: 0;
     }
 }
 
@@ -1068,31 +1163,32 @@ input:focus {
     background: #3b3c3e;
     float: right;
     border-radius: 20px;
-    position: relative;
+    right: 11px;
+    z-index: 99;
+    position: absolute;
     transition: $transition;
     &:before {
         content: "";
+        display: block;
         height: 16px;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+        width: 10px;
         background: #f7941d;
         border-radius: 20px;
+        transform: translateY(0px);
         transition: $transition;
     }
 }
 
-
-.perceptionActiveToggle-disable{
+.perceptionActiveToggle-disable {
     transition: $transition;
+    background: #2f2f31;
     &:before {
         content: "";
+        display: block;
         height: 16px;
-        width: 100%;
-        position: absolute;
+        width: 10px;
         transform: translateY(14px);
-        background: #f7941d;
+        background: #555658;
         border-radius: 20px;
         transition: $transition;
     }
@@ -1106,5 +1202,46 @@ input:focus {
     span {
         padding: 3px 0;
         float: left;
+    }
+}
+
+.customScroll {
+    opacity: 0;
+    .mCSB_dragger_bar {
+        background: #707072 !important;
+        width: 7px !important;
+    }
+    .mCSB_draggerRail {
+        background: #3b3c3e !important;
+        width: 7px !important;
+    }
+}
+
+.perceptionCollapse-disabled {
+    .mCSB_draggerRail {
+        background: #2f2f31 !important;
+    }
+}
+
+.customScroll.show {
+    opacity: 1;
+}
+
+.perceptionSearch {
+    float: left;
+    widtH: 100%;
+    margin-bottom: 10px;
+    input {
+        background: transparent;
+        font-family: $mainFont;
+        color: #555658;
+        font-style: italic;
+        border: 0;
+        border-bottom: 1px solid #555658;
+        padding: 3px 7px;
+        width: 100%;
+        height: 30px;
+        font-size:16px;
+
     }
 }
